Improvements_ca2/checkout-fn-hardened.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "11"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"checkout-fn","namespace":"lab4"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"checkout-fn"}},"template":{"metadata":{"labels":{"app":"checkout-fn"}},"spec":{"containers":[{"env":[{"name":"PRICING_URL","value":"http://pricing-svc"},{"name":"INVENTORY_URL","value":"http://inventory-svc"},{"name":"TIMEOUT_MS","value":"1500"},{"name":"PORT","value":"3003"}],"image":"lab4/checkout-fn:v1","imagePullPolicy" [...]
  creationTimestamp: "2026-04-01T16:20:56Z"
  generation: 17
  name: checkout-fn
  namespace: lab4
  resourceVersion: "171111"
  uid: ea509a4f-d2f9-43f3-ba5f-d92206b32e8b
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: checkout-fn
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-04-02T19:25:52Z"
      labels:
        app: checkout-fn
    spec:
      containers:
      - env:
        - name: PRICING_URL
          value: http://pricing-svc
        - name: INVENTORY_URL
          value: http://inventory-svc
        - name: TIMEOUT_MS
          value: "1500"
        - name: PORT
          value: "3003"
        image: lab4/checkout-fn:v3
        imagePullPolicy: IfNotPresent
        name: checkout-fn
        ports:
        - containerPort: 3003
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 3003
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1000
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2026-04-02T19:25:52Z"
    lastUpdateTime: "2026-05-22T15:36:24Z"
    message: ReplicaSet "checkout-fn-74d9b58d74" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2026-05-23T17:58:10Z"
    lastUpdateTime: "2026-05-23T17:58:10Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 17
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
