Improvements_ca2/inventory-fn-hardened.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "7"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"inventory-fn","namespace":"lab4"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"inventory-fn"}},"template":{"metadata":{"labels":{"app":"inventory-fn"}},"spec":{"containers":[{"env":[{"name":"PORT","value":"3002"}],"image":"lab4/inventory-fn:v1","imagePullPolicy":"IfNotPresent","name":"inventory-fn","ports":[{"containerPort":3002}],"readinessProbe":{"httpGet":{"path":"/health","port":3002},"initialDel [...]
  creationTimestamp: "2026-04-01T16:20:56Z"
  generation: 15
  name: inventory-fn
  namespace: lab4
  resourceVersion: "171110"
  uid: e851bd60-ea56-47b5-bbef-a0e30e0076d7
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: inventory-fn
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-04-02T19:28:53Z"
      labels:
        app: inventory-fn
    spec:
      containers:
      - env:
        - name: PORT
          value: "3002"
        image: lab4/inventory-fn:v3
        imagePullPolicy: IfNotPresent
        name: inventory-fn
        ports:
        - containerPort: 3002
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 3002
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1000
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2026-04-02T19:28:53Z"
    lastUpdateTime: "2026-05-22T15:36:26Z"
    message: ReplicaSet "inventory-fn-58c55c4cbb" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2026-05-23T17:58:10Z"
    lastUpdateTime: "2026-05-23T17:58:10Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 15
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
