Improvements_ca2/pricing-fn-hardened.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "6"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"pricing-fn","namespace":"lab4"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"pricing-fn"}},"template":{"metadata":{"labels":{"app":"pricing-fn"}},"spec":{"containers":[{"env":[{"name":"PORT","value":"3001"}],"image":"lab4/pricing-fn:v1","imagePullPolicy":"IfNotPresent","name":"pricing-fn","ports":[{"containerPort":3001}],"readinessProbe":{"httpGet":{"path":"/health","port":3001},"initialDelaySeconds" [...]
  creationTimestamp: "2026-04-01T16:20:56Z"
  generation: 6
  name: pricing-fn
  namespace: lab4
  resourceVersion: "171095"
  uid: 862355e1-23d3-4e4e-896f-4707e2fcd294
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: pricing-fn
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pricing-fn
    spec:
      containers:
      - env:
        - name: PORT
          value: "3001"
        image: lab4/pricing-fn:v3
        imagePullPolicy: IfNotPresent
        name: pricing-fn
        ports:
        - containerPort: 3001
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 3001
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1000
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2026-04-01T16:20:56Z"
    lastUpdateTime: "2026-05-22T15:36:29Z"
    message: ReplicaSet "pricing-fn-644cf645cd" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2026-05-23T17:58:09Z"
    lastUpdateTime: "2026-05-23T17:58:09Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 6
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
