Improvements_ca2/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"prometheus-svc","namespace":"monitoring"},"spec":{"ports":[{"nodePort":30091,"port":9090}],"selector":{"app":"prometheus"},"type":"NodePort"}}
  creationTimestamp: "2026-05-22T10:31:36Z"
  name: prometheus-svc
  namespace: monitoring
  resourceVersion: "143940"
  uid: d7b0c4f3-3183-4fd6-8578-06dbcdb055a2
spec:
  clusterIP: 10.43.23.3
  clusterIPs:
  - 10.43.23.3
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 30091
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: prometheus
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
